--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,91 +2,62 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    background-color: blanchedalmond;
-}
-
-main {
-    padding: 20px;
-}
-
-#sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #ffff;
+    width: 100%;
     height: 100vh;
-    border-radius: 0px 18px 0px 18px;
-}
-
-#sidebar-content {
-    padding: 12px;
-}
-
-#user {
     display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-bottom: 24px;
+    background-color:rgb(121, 167, 177);
 }
 
-#user-perfil {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 20px;
-}
-
-#user-infos {
+.sidebar {
+    width: 150px;
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
+    border-radius: 0 10px 10px 0;
+    background-color: rgb(124, 118, 201);
 }
 
-#user-infos span:last-child {
-    color: #6b6b6b;
-    font-size: 12px;
-
-}
-
-#side-items {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    list-style: none;
-}
-
-.side-item {
-    border-radius: 8px;
-    padding: 14px;
-    cursor: pointer;
-}
-
-.side-item a img {
-    width: 20px;
-    margin-right: 10px;
-}
-
-.side-item.active {
-    background-color: #4f4fe5;
-}
-
-.side-item:hover:not(.active){
-    background-color: #e3e9f7;
-}
-
-.side-item a {
-    text-decoration: none;
+.sidebar-title {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #0a0a0a;
+    margin: 10px;
 }
 
-.side-item.side-item.active a {
-    color: #e3e9f7;
+.sidebar-title img {
+    width: 40px;
+    background-color: yellow;
+    border-radius: 100px;
+    padding: 5px;
+    border: 2px solid black;
+}
+
+.sidebar-div {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar-div button {
+    display: flex;
+    width: 130px;
+    height: 50px;
+    border-radius: 15px;
+    align-items: center;
+    justify-content: initial;
+}
+
+.sidebar-div button:hover {
+    background-color: aquamarine;
+    transition: 0.6S;
+}
+
+.sidebar-div button img {
+    width: 20px;
+    margin: 0px 10px 0px 10px;
 }
