--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,8 +7,9 @@
 body {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     display: flex;
-    background-color:rgb(121, 167, 177);
+    background-color:rgb(0, 205, 251);
 }
 
 .sidebar {
@@ -16,8 +17,8 @@ body {
     display: flex;
     flex-direction: column;
     border: 1px solid black;
-    border-radius: 0 10px 10px 0;
-    background-color: rgb(124, 118, 201);
+    border-radius: 0 20px 0px 0;
+    background-color: rgb(64, 51, 233);
 }
 
 .sidebar-title {
@@ -25,6 +26,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 10px;
+    color: white;
 }
 
 .sidebar-title img {
@@ -60,4 +62,31 @@ body {
 .sidebar-div button img {
     width: 20px;
     margin: 0px 10px 0px 10px;
+}
+
+.columum {
+    width: 100%;
+    height: 100%;
+}
+
+.head {
+    display: flex;
+    width: 100%;
+    height: 70px;
+    border-bottom: 2px solid black;
+    justify-content: end;
+    align-items: center;
+}
+.head p {
+    margin-right: 40px;
+}
+.head img {
+    margin: 5px;
+    width: 45px;
+    border-radius: 100%;
+}
+
+#iframe {
+    width: 100%;
+    height: 100vh;
 }
